Fixed cmake error when LINK_PRIVATE mixed with plain in target_link_libraries. Image or/and Mask extracting

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -7,6 +7,29 @@ configure_file(poppler-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/poppler-version.
 
 add_subdirectory(tests)
 
+set(poppler_cpp_HEADERS
+  poppler-document.h
+  poppler-embedded-file.h
+  poppler-font.h
+  poppler-global.h
+  poppler-image.h
+  poppler-page.h
+  poppler-page-renderer.h
+  poppler-page-transition.h
+  poppler-rectangle.h
+  poppler-toc.h
+  ${CMAKE_CURRENT_BINARY_DIR}/poppler-version.h
+)
+
+set(poppler_cpp_Private_HEADERS
+  poppler-document-private.h
+  poppler-embedded-file-private.h
+  poppler-image-private.h
+  poppler-page-private.h
+  poppler-private.h
+  poppler-toc-private.h
+)
+
 set(poppler_cpp_SRCS
   poppler-document.cpp
   poppler-embedded-file.cpp
@@ -22,7 +45,7 @@ set(poppler_cpp_SRCS
   poppler-version.cpp
 )
 
-add_library(poppler-cpp SHARED ${poppler_cpp_SRCS})
+add_library(poppler-cpp SHARED ${poppler_cpp_SRCS} ${poppler_cpp_HEADERS} ${poppler_cpp_Private_HEADERS})
 set_target_properties(poppler-cpp PROPERTIES VERSION 0.3.0 SOVERSION 0)
 if(MINGW)
     get_target_property(POPPLER_CPP_SOVERSION poppler-cpp SOVERSION)
