Refactoring. private/public scope for process steps.

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -18,6 +18,7 @@ set(poppler_cpp_HEADERS
   poppler-page-transition.h
   poppler-rectangle.h
   poppler-toc.h
+  poppler-extern-draw.h
   ${CMAKE_CURRENT_BINARY_DIR}/poppler-version.h
 )
 
@@ -28,6 +29,7 @@ set(poppler_cpp_Private_HEADERS
   poppler-page-private.h
   poppler-private.h
   poppler-toc-private.h
+  ExternDrawOutputDivice.h
 )
 
 set(poppler_cpp_SRCS
@@ -42,7 +44,9 @@ set(poppler_cpp_SRCS
   poppler-private.cpp
   poppler-rectangle.cpp
   poppler-toc.cpp
+  poppler-extern-draw.cpp
   poppler-version.cpp
+  ExternDrawOutputDivice.cpp
 )
 
 add_library(poppler-cpp SHARED ${poppler_cpp_SRCS} ${poppler_cpp_HEADERS} ${poppler_cpp_Private_HEADERS})
@@ -55,16 +59,6 @@ target_link_libraries(poppler-cpp poppler ${ICONV_LIBRARIES})
 install(TARGETS poppler-cpp RUNTIME DESTINATION bin LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
 install(FILES
-  poppler-document.h
-  poppler-embedded-file.h
-  poppler-font.h
-  poppler-global.h
-  poppler-image.h
-  poppler-page.h
-  poppler-page-renderer.h
-  poppler-page-transition.h
-  poppler-rectangle.h
-  poppler-toc.h
-  ${CMAKE_CURRENT_BINARY_DIR}/poppler-version.h
+  ${poppler_cpp_HEADERS}
   DESTINATION include/poppler/cpp)
 
