Update to 0.80.0 Fixed include sequence: poppler/Error.h contain widows.h now - this must be before jpeglib.h Added OpenJpeg2 Install exported target: poppler and poppler-cpp Option for excluding image data downloading Catch bad_alloc for big image allocations. Removed -fno-exceptions Opacity component for color Sometime the ref is a Stream object Fixed color space format casting. Added preprocess condition for SPLASH_CMYK Contours from text and stroke. Coordinate transform operators. Fixed cmake error when LINK_PRIVATE mixed with plain in target_link_libraries. Image or/and Mask extracting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -506,7 +506,12 @@ target_link_libraries(poppler LINK_PRIVATE ${poppler_LIBS})
 if(CMAKE_USE_PTHREADS_INIT)
    target_link_libraries(poppler LINK_PRIVATE Threads::Threads)
 endif()
-install(TARGETS poppler RUNTIME DESTINATION bin LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS poppler EXPORT poppler-config
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} include/poppler)
+install(EXPORT poppler-config DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/poppler)
 
 if(ENABLE_UNSTABLE_API_ABI_HEADERS)
   install(FILES
